# moq-live-streaming

./: README.md  package.json
client/: .env  .gitignore  index.html  package.json
client/src/: main.tsx
client/src/components/: LiveVideoCanvas.tsx
client/src/lib/: Logger.ts  Metrics.ts  Mp4Parser.ts  Player.ts  types.ts
client/src/lib/StreamPerBFrame/: ReorderBuffer.ts  index.ts
client/src/lib/StreamPerGop/: SkipOldGops.ts  index.ts
client/src/pages/: App.tsx  Test.tsx
client/testbed/: config.ts  pf_rules.txt  run.ts  simulateMacos.ts
client/testbed/network-patterns/: PROFILE_500Kbit.json
client/testbed/network-patterns/twitch-challenge/normal/: PROFILE_FAST_JITTERS.json  PROFILE_SPIKE.json
client/testbed/scripts/: clean.ts  simulate.ts
mp4-parser/: fmp4.go  go.mod
server/: .gitignore  Cargo.toml  package.json
server-go/: .gitignore  fmp4.go  go.mod  go.sum  livestream_server.go  main.go  stream_mapper.go  tls.go
server-go/cert/: generate  go.mod
server/dev/: live-ingest.sh
server/mp4-parser/: .gitignore  go.sum  main.go
server/scripts/: run.sh
server/src/: local.rs  main.rs  server.rs  video.rs
server/src/mappings/: bframe.rs  ftype.rs  gop.rs  mod.rs  track.rs
testbed/: .gitignore  config.ts  package.json  run.ts
testbed/network-patterns/custom/: PROFILE_CUSTOM.json  PROFILE_SMALL_DROP.json
testbed/network-patterns/twitch-challenge/normal/: PROFILE_CASCADE.json  PROFILE_INTRA_CASCADE.json  PROFILE_SLOW_JITTERS.json
testbed/scripts/: clean.ts  simulate.ts
testbed/src/: simulateMacos.ts
