[package]
name = "moq-streaming-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
anyhow = "1.0.71"
bytes = "1.4.0"
moq-transport = "0.5"
clap = { version = "4", features = ["derive"] }
futures = "0.3.30"
log = "0.4.22"
env_logger = "0.11.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
moq-native = "0.3.0"

[patch.crates-io]
moq-transport = { path = '/Users/vicente/repos/moq-rs/moq-transport' }
moq-native = { path = '/Users/vicente/repos/moq-rs/moq-native' }
